2009-03-15 15:09-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSScrollView.m: Remove FIXME comment and provided an 
	explaination for why a cast wasn't used.   Added nonDynamic flag
	as well as other flags from the nib file.

2009-03-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSInfoPanel.m: Use setTitle: instead of setStringValue:
	for theme button.

2009-03-13 01:01-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSToolbarView.m:
	* Source/NSToolbar.m: Partial fix for toolbar drag and drop issues.

2009-03-12 19:47-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSPrintOperation.m: Correct issues with handling of 
	rectangle passed back from rectForPage: callback in NSView 
	subclasses.  This rect should override existing calculations 
	when it is passed in.
	* Source/NSView.m: Change to use NSPrintPaperBounds if and only if
	aRect is passed in as a blank rect.  Previously the code was
	using the NSPrintPaperBounds value and ignoring the passed in
	value.

2009-03-11 Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSMatrix.m: GC fixups ... change code that was attempting
        to use the old GSAtomicMallocZone() function.

2009-03-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSApplication.m (-setApplicationIconImage:): Copy the new
	application image before assigning the name "NSApplicationIcon" to
	it. This solves bug #25793.

2009-03-05 Fred Kiefer <FredKiefer@gmx.de>

	* Resources/GNUmakefile: Add French localisation. 
	* Resources/French.lproj/Localizable.strings: New localisation file.
	Patch by Philippe Roussel <p.o.roussel@free.fr>.

2009-03-04 Xavier Glattard <xavier.glattard@online.fr>

	* Headers/NSView.h,
	  Source/NSView.m: Add a flag 'ignoresBacking' that indicates the
	  receiver do not draw on the backing store, and so prevent the
	  backing store to be flushed by [-unlocFocus:]
	* Headers/NSView.h,
	  Source/NSView.m,