@@ -1,3 +1,7 @@
+2009-03-15 20:28-EDT Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Source/NSScrollView.m: Added more flags for nib loading.
+
 2009-03-15 15:09-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Source/NSScrollView.m: Remove FIXME comment and provided an 
